<resources>
    <string name="app_name">My Project</string>
    <string name="sign_up_logo">sign up logo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">sign up</string>


    <string name="welcome_logo">welcome logo</string>
    <string name="error_name_register">Please add ur name</string>
    <string name="log_in">log in</string>
</resources>